<resources>
    <string name="app_name">RpgAndroidproject</string>
    <string name="bt_connexion">Connexion</string>
    <string name="Titre_connexion">Page de Connexion</string>
    <string name="bt_inscription">Inscription</string>
    <string name="tb_userName">username</string>
    <string name="tb_password">password</string>
    <string name="Titre_inscription">sign in</string>
    <string name="tb_repeatPassword">repeat the Password</string>
    <string name="bt_confirmInscription">confirm registration</string>
    <string name="bt_seConnecter">log in</string>
    <string name="bt_deco">log out</string>
    <string name="bt_new_cara">New character</string>
    <string name="Lastname">Lastname</string>
    <string name="name">name</string>
    <string name="bt_ajout_personnage">Create character</string>
    <string name="Titre_AjoutPersonnage">Character form</string>
    <string name="previous">Previous</string>
    <string name="bt_CreateNewCharacter">New character</string>
    <string name="Titre_listePersonnage">select a character</string>
    <string name="title_activity_form_modif_perso">formModifPerso</string>
    <string name="bt_Confirmation_modif">Confirm Modification</string>
    <string name="title_activity_maps_activite">Map</string>
    <string name="bt_map">Map</string>
    <string name="bt_ReposCourt">Repos court</string>
    <string name="bt_reposLong">Repos Long</string>
    <string name="tv_tavern">Your are in a tavern</string>
    <string name="bt_attaquer">Attaquer</string>
    <string name="bt_Fuir">Fuir</string>
    <string name="bt_retour_MenuPrincipal">Retour au choix de personnages</string>
    <string name="bt_retour">Return</string>
    <string name="bt_LancerCombat" >Lanch fight</string>
    <string name="name_group">name of group</string>
    <string name="bt_createGroup">Create Group</string>
    <string name="titre_Form_create_group">Formulaire de création de groupe</string>
    <string name="bt_Rejoindre">Join the team</string>
    <string name="bt_Actualiser">Actualiser</string>
    <string name="Nomdugroupehint">Nom du groupe</string>
</resources>
