<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activite.Inscription">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="395dp"
        android:layout_height="414dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Titre_Inscription"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Titre_inscription"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/tb_userName"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="41dp"
                android:ems="10"
                android:hint="@string/tb_userName"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Titre_Inscription" />

            <EditText
                android:id="@+id/tb_password"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/tb_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tb_userName" />

            <EditText
                android:id="@+id/tb_rePassword"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/tb_repeatPassword"
                android:inputType="textNoSuggestions|textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tb_password" />

            <Button
                android:id="@+id/bt_Inscription"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:onClick="onClickBouttonInscription"
                android:text="@string/bt_confirmInscription"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tb_rePassword" />

            <Button
                android:id="@+id/bt_connexion"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:onClick="onClickBouttonConnexion"
                android:text="@string/bt_connexion"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_Inscription" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>