<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_parchemin"
    tools:context=".activite.formCreateGroupeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/titre"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:text="@string/titre_Form_create_group"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editText_nomGroupe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name_group" />

            <Button
                android:id="@+id/bt_createGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fui_idp_button_background_email"
                android:onClick="onClick_createGroupe"
                android:text="@string/bt_createGroup"
                android:textColor="@color/browser_actions_bg_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="69dp" />

            <Button
                android:id="@+id/bt_retour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/fui_idp_button_background_email"
                android:onClick="onClickRetour"
                android:text="@string/bt_retour"
                android:textColor="@color/browser_actions_bg_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_createGroup" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>