<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_parchemin"
    tools:context=".activite.GroupeViewActivity">

    <ScrollView
        android:id="@+id/scrollView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nomGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/liste_personnage_groupe"
                android:layout_width="match_parent"
                android:layout_height="420dp" />

            <Button
                android:id="@+id/bt_actualiser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fui_idp_button_background_email"
                android:onClick="onClickActualiser"
                android:text="@string/bt_Actualiser"
                android:textColor="@color/browser_actions_bg_grey"
                tools:layout_editor_absoluteY="480dp" />

            <Button
                android:id="@+id/bt_retour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/fui_idp_button_background_email"
                android:onClick="onClickRetour"
                android:text="@string/bt_retour"
                android:textColor="@color/browser_actions_bg_grey"
                app:layout_constraintTop_toBottomOf="@+id/bt_LancerCombat" />

            <Button
                android:id="@+id/bt_LancerCombat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/fui_idp_button_background_email"
                android:onClick="onClickCommencerCombat"
                android:text="@string/bt_LancerCombat"
                android:textColor="@color/browser_actions_bg_grey"
                app:layout_constraintTop_toBottomOf="@+id/bt_actualiser" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>